--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,16 @@ a {
   padding: 0 5%;
 }
 
+img {
+  max-width: 100%;
+}
+
+
+
+/**********************************
+HEADING
+***********************************/
+
 #logo {
   text-align: center;
   margin: 0;
@@ -38,9 +48,19 @@ h1, h2 {
   color: #fff;
 }
 
-nav {
+
+/**********************************
+NAVIGATION
+***********************************/
+
+
+  nav {
   background: #599a68;
+  text-align: left;
+  padding: 10px 0;
+  margin: 20px 0 0;
 }
+
 
 nav a, nav a:visited {
   color: #fff;
@@ -53,6 +73,37 @@ nav a.selected, nav a:hover {
 body {
   background-color: #fff;
   color: #999;
+}
+
+
+/**********************************
+FOOTER
+***********************************/
+
+footer {
+  font-size: 0.75em;
+  text-align: center;
+  padding-top: 50px;
+  color: #ccc;
+}
+
+
+/**********************************
+PAGE: PORTFOLIO
+***********************************/
+
+#gallery {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+#gallery li {
+  float: left;
+  width: 45%;
+  margin: 2.5%;
+  background-color: #f5f5f5;
+  color: #bdc3c7;
 }
 
 
